templates/dast-operator_template.yaml
---
# Source: dast-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-dast-operator-webhook-service
  labels:
    helm.sh/chart: dast-operator-0.3.2
    app.kubernetes.io/name: dast-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dast-operator
    app.kubernetes.io/instance: release-name
---
# Source: dast-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-dast-operator
  labels:
    helm.sh/chart: dast-operator-0.3.2
    app.kubernetes.io/name: dast-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dast-operator
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dast-operator
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-dast-operator
      securityContext:
        {}
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: release-name-dast-operator-webhook-server-cert
      containers:
        - name: dast-operator
          securityContext:
            {}
          image: "ghcr.io/banzaicloud/dast-operator:0.4.3"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          ports:
            - name: http
              containerPort: 9443
              protocol: TCP
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /ingress
              port: http
              scheme: HTTPS
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /ingress
              port: http
              scheme: HTTPS
          resources:
            {}
---
# Source: dast-operator/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-dast-operator-validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-dast-operator-certificate
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: release-name-dast-operator-webhook-service
      namespace: default
      path: /ingress
  failurePolicy: Fail
  name: dast.security.banzaicloud.io
  rules:
  - apiGroups:
    - extensions
    - networking.k8s.io
    apiVersions:
    - v1beta1
    - v1
    operations:
    - CREATE
    resources:
    - ingresses
  admissionReviewVersions:
    - v1beta1
    - v1
  sideEffects: None
  timeoutSeconds: 5
---
# Source: dast-operator/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-dast-operator-test-connection"
  labels:
    helm.sh/chart: dast-operator-0.3.2
    app.kubernetes.io/name: dast-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-dast-operator:443']
  restartPolicy: Never
